objects/Room__c.object
<CustomObject>
    <description>Data about room properties and it&apos;s binding to a certain hotel.</description>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_per_Day__c</fullName>
        <label>Price per Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hotel__c</columns>
        <columns>Capacity__c</columns>
        <columns>Price_per_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>